# hands-on-with-summit

./: .gitignore  LICENSE.md  README.md  agenda.md
challenges/: README.md
challenges/Access_Ascent_and_Clone_Repo/: README.md
challenges/Access_Frontier_and_Clone_Repo/: README.md
challenges/Basic_Unix_Vim/: README.md  text_file.txt
challenges/Basic_Workflow/: Makefile  README.md  submit.lsf  submit.sbatch  vector_addition.c
challenges/Find_the_Compiler_Flag/: Completion_Notes.txt  Makefile  README.md  submit.lsf
challenges/GPU_Data_Transfers/: .gitignore  Makefile  README.md  Suzannes_notes.txt  submit.lsf  submit.sbatch  vector_addition.cu
challenges/GPU_Matrix_Multiply/: .gitignore  Makefile  README.md  cpu_gpu_dgemm.c  cpu_gpu_dgemm.cpp  submit.lsf  submit.sbatch
challenges/GPU_Matrix_Multiply/Solution/: cpu_gpu_dgemm_Solution.cpp
challenges/GPU_Profiling/: Makefile  README.md  matrix_sums_optimized.cpp  matrix_sums_optimized.cu  matrix_sums_unoptimized.cpp  submit_optimized.lsf  submit_optimized.sbatch  submit_unoptimized.lsf  submit_unoptimized.sbatch
challenges/Jobs_in_Time_Window/: README.md
challenges/MPI_Basics/: README.md
challenges/MPI_Basics/bcast/: Makefile  bcast.235809  mpi_bcast.c  run  submit_bcast.lsf  submit_bcast.sbatch
challenges/MPI_Basics/hello/: Makefile  hello.235799  hello.235800  mpi_hello.c  mpi_hello_solution.c  run  submit_hello.lsf  submit_hello.sbatch
challenges/MPI_Basics/ptp/: Makefile  ptp.c  ptp_hello.235801  run  submit_ptp.lsf  submit_ptp.sbatch
challenges/MPI_Basics/ptp/solution/: ptp_sol.c
challenges/OpenMP_Basics/: README.md
challenges/OpenMP_Basics/hello_world/: .gitignore  Makefile  hello_world.c  submit.lsf  submit.sbatch
challenges/OpenMP_Basics/vector_addition/: .gitignore  Makefile  submit.lsf  submit.sbatch  vec_add.236025  vec_add.236026  vec_add.236028  vector_addition.c
challenges/OpenMP_Offload/: Makefile  README.md  matrix_multiply.c  submit.lsf  submit.sbatch
challenges/Parallel_Scaling_Performance/: Makefile  README.md  poisson2d.c  poisson2d_serial.h  submit_01.lsf  submit_02.lsf  submit_02.sbatch  submit_04.lsf  submit_08.lsf  submit_08.sbatch  submit_16.lsf  submit_16.sbatch  submit_32.lsf  submit_42.lsf  submit_gpu_01.lsf  submit_gpu_01.sbatch  submit_gpu_02.lsf  submit_gpu_03.lsf  submit_gpu_04.lsf  submit_gpu_05.lsf  submit_gpu_06.lsf
challenges/Password_in_a_Haystack/: Completion_Notes.txt  README.md  haystack_00.txt  haystack_01.txt  haystack_02.txt
challenges/Python_Conda_Basics/: README.md  deactivate_envs.sh  hello.py
challenges/Python_Cupy_Basics/: README.md  data_transfer.py  data_transfer_solution.py  submit_data.lsf  submit_data.sbatch  submit_timings.lsf  submit_timings.sbatch  timings.py
challenges/Python_Cupy_Basics/solution/: Completion_notes.txt  data_transfer_solution.py
challenges/Python_Parallel_HDF5/: README.md  galaxy.py  generate_animation.py  hdf5_parallel.py  hello_mpi.py  submit_galaxy.lsf  submit_galaxy.sbatch  submit_h5py.lsf  submit_h5py.sbatch  submit_hello.lsf  submit_hello.sbatch
challenges/Python_Parallel_HDF5/solution/: galaxy_solution.py
challenges/Python_Pytorch_Basics/: README.md  cnn.py  cnn_test.py  deactivate_envs.sh  download_data.py  results.txt  submit_cnn.lsf  submit_cnn.sbatch
challenges/Python_Pytorch_CNN/: README.md  cnn.py  submit_cnn.lsf
challenges/Score-P_and_Vampir_Basics/: README.md
challenges/Score-P_and_Vampir_Basics/gpu-program-examples/miniWeather-openacc/: CMakeLists.txt  cmake.sh  submit.lsf
challenges/Score-P_and_Vampir_Basics/gpu-program-examples/redundant_MM/: submit.lsf
challenges/Score-P_and_Vampir_Basics/jacobi/MPI/: Makefile  jacobi.c  main.c  submit.lsf
challenges/Score-P_and_Vampir_Basics/miniSweep/: cmake_openmp.sh  submit.lsf
challenges/Score-P_and_Vampir_Basics/miniWeather/: cmake.sh  submit_mpi.lsf  submit_openmp.lsf
challenges/Score-P_and_Vampir_Basics/monte_carlo/: Makefile  calculating_pi.c  submit.lsf
challenges/Score-P_and_Vampir_Basics/redundant_MM/: Makefile  redundant_MM.cu
challenges/Srun_Job_Launcher/: Makefile  README.md  hello_mip_omp.c  submit.sl
challenges/archive/: README.md
challenges/archive/Find_the_Compiler_Flag/: Completion_Notes.txt  Makefile  README.md  submit.sbatch  vector_addition.c
challenges/archive/GPU_Data_Transfers/: Makefile  Suzannes_notes.txt  submit.sbatch  vector_addition.cpp
challenges/archive/Parallel_Scaling_Performance/: .gitignore  Completion_Notes.txt  Makefile  README.md  poisson2d.c  submit_01.sbatch  submit_04.sbatch  submit_32.sbatch  submit_64.sbatch  submit_gpu_02.sbatch  submit_gpu_03.sbatch  submit_gpu_04.sbatch  submit_gpu_05.sbatch  submit_gpu_06.sbatch
challenges/archive/Score-P_and_Vampir_Basics/: README.md
challenges/archive/Score-P_and_Vampir_Basics/miniSweep/: CMakeLists.txt  cmake_openmp.sh
challenges/archive/Score-P_and_Vampir_Basics/miniSweep/src/1_base/: arguments.c  arguments.h  env.c  env_assert.h  env_assert_kernels.h  env_cuda.c  env_cuda.h  env_cuda_kernels.h  env_mic.h  env_mic_kernels.h  env_openmp_kernels.h  pointer.c  pointer.h  pointer_kernels.h  types.h
challenges/archive/Score-P_and_Vampir_Basics/miniSweep/src/2_sweeper_base/: array_operations.h  definitions.h  definitions_kernels.h  dimensions.h  dimensions_kernels.h
challenges/archive/Score-P_and_Vampir_Basics/miniSweep/src/3_sweeper/: Makefile.OLD  faces_kba.c  faces_kba.h  quantities.c  quantities.h  quantities_testing.h  quantities_testing_kernels.h  stepscheduler_kba.c  stepscheduler_kba.h  sweeper.c  sweeper.h  sweeper_kba.h  sweeper_kba_c.h  sweeper_kba_kernels.h  sweeper_simple_c.h  sweeper_tileoctants.h
challenges/archive/Score-P_and_Vampir_Basics/miniSweep/src/4_driver/: runner.c  runner.h  sweep.c  tester.c
challenges/archive/Score-P_and_Vampir_Basics/miniWeather/: CMakeLists.txt  submit_mpi.lsf  submit_openmp.lsf
challenges/jsrun_Job_Launcher/: README.md  submit.lsf
challenges/srun_Job_Launcher/: .gitignore  Completion_Notes.txt  README.md  submit.sbatch
misc_scripts/: install_conda_frontier.sh
(+37 files in other folders)
